--- a/Apresentação Final/loraCB.ipynb
+++ b/Apresentação Final/loraCB.ipynb
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "47dbb135",
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_IMAGE_PATH = \"C:\\\\Users\\\\igorg\\\\Documents\\\\Programação\\\\PDSI\\\\imagens\\\\Imagem1.webp\"\n",
+    "INPUT_IMAGE_PATH = \"C:\\\\Users\\\\igorg\\\\Documents\\\\Programação\\\\PDSI\\\\imagens\\\\kkk.jpeg\"\n",
     "\n",
     "LORA_FOLDER = \"C:\\\\Users\\\\igorg\\\\Documents\\\\Programação\\\\PDSI\\\\output\\\\cyberpunk_style\"\n",
     "\n",
@@ -39,22 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "7737c0cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "TRIGGER_WORD = \"cyberpunk_art\"  # ou a palavra certa do seu LoRA\n",
     "\n",
-    "PROMPT = f\"{TRIGGER_WORD}, tree, mechanical branches, neon lights, futuristic city background, night time, glowing, cyan and magenta lighting, sci-fi, masterpiece, best quality, highly detailed\"\n",
+    "PROMPT = f\"{TRIGGER_WORD}, cyborg sleeping, system recharge mode, wires connected to head, futuristic techwear armor, glowing blue neon lights, dark sci-fi lab background, low battery warning, high tech, cyberpunk 2077 vibes, masterpiece\"\n",
     "\n",
-    "# Remova coisas de humano do negativo para garantir, mas deixe o básico\n",
-    "NEGATIVE_PROMPT = \"daylight, sun, rustic, vintage, sepia, black and white, low quality, bad anatomy, blurry, dull colors, natural lighting\""
+    "NEGATIVE_PROMPT = \"daylight, sun, natural background, rustic, vintage, awake, alert eyes\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "01a8d090",
    "metadata": {},
    "outputs": [],
@@ -63,12 +62,12 @@
     "SEED = 42\n",
     "NUM_STEPS = 30\n",
     "GUIDANCE_SCALE = 7.5\n",
-    "STRENGTH = 0.75"
+    "STRENGTH = 0.80"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "7c17fc72",
    "metadata": {},
    "outputs": [
@@ -87,9 +86,7 @@
       "Some weights of the model checkpoint at stablediffusionapi/anything-v5 were not used when initializing CLIPTextModel: ['text_model.encoder.layers.11.layer_norm1.bias', 'text_model.encoder.layers.11.layer_norm1.weight', 'text_model.encoder.layers.11.layer_norm2.bias', 'text_model.encoder.layers.11.layer_norm2.weight', 'text_model.encoder.layers.11.mlp.fc1.bias', 'text_model.encoder.layers.11.mlp.fc1.weight', 'text_model.encoder.layers.11.mlp.fc2.bias', 'text_model.encoder.layers.11.mlp.fc2.weight', 'text_model.encoder.layers.11.self_attn.k_proj.bias', 'text_model.encoder.layers.11.self_attn.k_proj.weight', 'text_model.encoder.layers.11.self_attn.out_proj.bias', 'text_model.encoder.layers.11.self_attn.out_proj.weight', 'text_model.encoder.layers.11.self_attn.q_proj.bias', 'text_model.encoder.layers.11.self_attn.q_proj.weight', 'text_model.encoder.layers.11.self_attn.v_proj.bias', 'text_model.encoder.layers.11.self_attn.v_proj.weight']\n",
       "- This IS expected if you are initializing CLIPTextModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing CLIPTextModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Loading pipeline components...:  67%|██████▋   | 4/6 [00:04<00:02,  1.31s/it]c:\\Users\\igorg\\Documents\\Programação\\PDSI\\venv\\Lib\\site-packages\\transformers\\models\\clip\\feature_extraction_clip.py:30: FutureWarning: The class CLIPFeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use CLIPImageProcessor instead.\n",
-      "  warnings.warn(\n",
-      "Loading pipeline components...: 100%|██████████| 6/6 [00:04<00:00,  1.21it/s]\n",
+      "Loading pipeline components...: 100%|██████████| 6/6 [00:08<00:00,  1.48s/it]\n",
       "You have disabled the safety checker for <class 'diffusers.pipelines.stable_diffusion.pipeline_stable_diffusion_img2img.StableDiffusionImg2ImgPipeline'> by passing `safety_checker=None`. Ensure that you abide to the conditions of the Stable Diffusion license and do not expose unfiltered results in services or applications open to the public. Both the diffusers team and Hugging Face strongly recommend to keep the safety filter enabled in all public facing circumstances, disabling it only for use-cases that involve analyzing network behavior or auditing its results. For more information, please have a look at https://github.com/huggingface/diffusers/pull/254 .\n"
      ]
     },
@@ -106,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.21it/s]\n"
+      "100%|██████████| 22/22 [00:11<00:00,  2.00it/s]\n"
      ]
     },
     {
@@ -122,7 +119,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.21it/s]\n"
+      "100%|██████████| 22/22 [00:09<00:00,  2.25it/s]\n"
      ]
     },
     {
@@ -138,7 +135,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.22it/s]\n"
+      "100%|██████████| 22/22 [00:09<00:00,  2.26it/s]\n"
      ]
     },
     {
@@ -154,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.17it/s]\n"
+      "100%|██████████| 22/22 [00:09<00:00,  2.25it/s]\n"
      ]
     },
     {
@@ -170,7 +167,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.19it/s]\n"
+      "100%|██████████| 22/22 [00:10<00:00,  2.12it/s]\n"
      ]
     },
     {
@@ -186,7 +183,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.22it/s]\n"
+      "100%|██████████| 22/22 [00:10<00:00,  2.16it/s]\n"
      ]
     },
     {
@@ -202,7 +199,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.21it/s]\n"
+      "100%|██████████| 22/22 [00:10<00:00,  2.15it/s]\n"
      ]
     },
     {
@@ -218,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.25it/s]\n"
+      "100%|██████████| 22/22 [00:10<00:00,  2.14it/s]\n"
      ]
     },
     {
@@ -234,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.22it/s]\n"
+      "100%|██████████| 22/22 [00:09<00:00,  2.21it/s]\n"
      ]
     },
     {
@@ -250,7 +247,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 21/21 [00:09<00:00,  2.20it/s]\n"
+      "100%|██████████| 22/22 [00:09<00:00,  2.24it/s]\n"
      ]
     },
     {
