--- a/Apresentação Final/loraPO.ipynb
+++ b/Apresentação Final/loraPO.ipynb
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b453e254",
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_IMAGE_PATH = \"C:\\\\Users\\\\igorg\\\\Documents\\\\Programação\\\\PDSI\\\\imagens\\\\Imagem1.webp\"\n",
+    "INPUT_IMAGE_PATH = \"C:\\\\Users\\\\igorg\\\\Documents\\\\Programação\\\\PDSI\\\\imagens\\\\kkk.jpeg\"\n",
     "\n",
     "LORA_FOLDER = \"C:\\\\Users\\\\igorg\\\\Documents\\\\Programação\\\\PDSI\\\\output\\\\pintura_oleo_style\"\n",
     "\n",
@@ -39,22 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "f14baba6",
    "metadata": {},
    "outputs": [],
    "source": [
     "TRIGGER_WORD = \"pintura_oleo_art\"  # ou a palavra certa do seu LoRA\n",
     "\n",
-    "PROMPT = f\"{TRIGGER_WORD}, tree, nature, landscape, outdoors, oil painting, heavy impasto, brush strokes, textured canvas, traditional art, masterpiece, rich colors\"\n",
+    "PROMPT = f\"{TRIGGER_WORD}, young man sleeping deeply, exhausted, slumped posture, wearing blue tunic, resting head on arm, dramatic chiaroscuro lighting, moody atmosphere, heavy brush strokes, impasto, oil on canvas, textured, classical art, masterpiece\"\n",
     "\n",
-    "# Remova coisas de humano do negativo para garantir, mas deixe o básico\n",
-    "NEGATIVE_PROMPT = \"photo, realistic, 3d render, smooth, digital art, vector, low quality, bad anatomy\""
+    "NEGATIVE_PROMPT = \"photo, realistic, bright lights, modern, digital art, smooth, 3d render, vector\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b4989d05",
    "metadata": {},
    "outputs": [],
@@ -63,12 +62,12 @@
     "SEED = 42\n",
     "NUM_STEPS = 30\n",
     "GUIDANCE_SCALE = 7.5\n",
-    "STRENGTH = 0.65"
+    "STRENGTH = 0.60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "6728f9fa",
    "metadata": {},
    "outputs": [
@@ -87,9 +86,7 @@
       "Some weights of the model checkpoint at stablediffusionapi/anything-v5 were not used when initializing CLIPTextModel: ['text_model.encoder.layers.11.layer_norm1.bias', 'text_model.encoder.layers.11.layer_norm1.weight', 'text_model.encoder.layers.11.layer_norm2.bias', 'text_model.encoder.layers.11.layer_norm2.weight', 'text_model.encoder.layers.11.mlp.fc1.bias', 'text_model.encoder.layers.11.mlp.fc1.weight', 'text_model.encoder.layers.11.mlp.fc2.bias', 'text_model.encoder.layers.11.mlp.fc2.weight', 'text_model.encoder.layers.11.self_attn.k_proj.bias', 'text_model.encoder.layers.11.self_attn.k_proj.weight', 'text_model.encoder.layers.11.self_attn.out_proj.bias', 'text_model.encoder.layers.11.self_attn.out_proj.weight', 'text_model.encoder.layers.11.self_attn.q_proj.bias', 'text_model.encoder.layers.11.self_attn.q_proj.weight', 'text_model.encoder.layers.11.self_attn.v_proj.bias', 'text_model.encoder.layers.11.self_attn.v_proj.weight']\n",
       "- This IS expected if you are initializing CLIPTextModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing CLIPTextModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Loading pipeline components...:   0%|          | 0/6 [00:00<?, ?it/s]c:\\Users\\igorg\\Documents\\Programação\\PDSI\\venv\\Lib\\site-packages\\transformers\\models\\clip\\feature_extraction_clip.py:30: FutureWarning: The class CLIPFeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use CLIPImageProcessor instead.\n",
-      "  warnings.warn(\n",
-      "Loading pipeline components...: 100%|██████████| 6/6 [00:02<00:00,  2.01it/s]\n",
+      "Loading pipeline components...: 100%|██████████| 6/6 [00:07<00:00,  1.19s/it]\n",
       "You have disabled the safety checker for <class 'diffusers.pipelines.stable_diffusion.pipeline_stable_diffusion_img2img.StableDiffusionImg2ImgPipeline'> by passing `safety_checker=None`. Ensure that you abide to the conditions of the Stable Diffusion license and do not expose unfiltered results in services or applications open to the public. Both the diffusers team and Hugging Face strongly recommend to keep the safety filter enabled in all public facing circumstances, disabling it only for use-cases that involve analyzing network behavior or auditing its results. For more information, please have a look at https://github.com/huggingface/diffusers/pull/254 .\n"
      ]
     },
@@ -107,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 18/18 [00:08<00:00,  2.14it/s]\n"
+      "100%|██████████| 16/16 [00:07<00:00,  2.07it/s]\n"
      ]
     },
     {
@@ -123,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 18/18 [00:08<00:00,  2.14it/s]\n"
+      "100%|██████████| 16/16 [00:08<00:00,  1.93it/s]\n"
      ]
     },
     {
@@ -139,7 +136,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 18/18 [00:08<00:00,  2.15it/s]\n"
+      "100%|██████████| 16/16 [00:07<00:00,  2.03it/s]\n"
      ]
     },
     {
@@ -155,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 18/18 [00:08<00:00,  2.18it/s]\n"
+      "100%|██████████| 16/16 [00:07<00:00,  2.02it/s]\n"
      ]
     },
     {
@@ -171,7 +168,7 @@
      "output_type": "stream",
      "text": [
       "Loading adapter weights from state_dict led to unexpected keys not found in the model: text_model.encoder.layers.11.mlp.fc1.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc1.lora_B.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_A.default_0.weight, text_model.encoder.layers.11.mlp.fc2.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.k_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.out_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.q_proj.lora_B.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_A.default_0.weight, text_model.encoder.layers.11.self_attn.v_proj.lora_B.default_0.weight. \n",
-      "100%|██████████| 18/18 [00:08<00:00,  2.17it/s]\n"
+      "100%|██████████| 16/16 [00:08<00:00,  1.99it/s]\n"
      ]
     },
     {
